--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -3,6 +3,7 @@
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "eslint [0-9]*.js",
     "check": "eslint", 
+    "fix": "eslint [0-9]*.js --fix",
     "dev": "npx babel-node",
     "test": "jest",
     "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
